--- a/2025_10_29/static/index.html
+++ b/2025_10_29/static/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Strona główna</title>
+        <link rel="stylesheet" href="/static/style.css">
     </head>
     <body>
         <header>
