add paths for o-nas, oferta, kontakt

--- a/2025_10_29/static/index.html
+++ b/2025_10_29/static/index.html
@@ -8,7 +8,12 @@
     <body>
         <header>
             <h1>Strona główna</h1>
-            <nav></nav>
+            <nav>
+                <a href="/">Strona główna</a>
+                <a href="/o-nas">O nas</a>
+                <a href="/oferta">Oferta</a>
+                <a href="/kontakt">Kontakt</a>
+            </nav>
         </header>
         <footer>
             <p>Wiktor Kycia 4D</p>
