--- a/2025_10_29/static/index.html
+++ b/2025_10_29/static/index.html
@@ -15,6 +15,14 @@
                 <a href="/kontakt">Kontakt</a>
             </nav>
         </header>
+        <main>
+            <h1>Strona główna</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid autem consectetur dignissimos distinctio doloribus eos eum facilis, id inventore iusto minus nam nisi perferendis qui rem soluta tenetur totam veritatis.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid autem consectetur dignissimos distinctio doloribus eos eum facilis, id inventore iusto minus nam nisi perferendis qui rem soluta tenetur totam veritatis.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid autem consectetur dignissimos distinctio doloribus eos eum facilis, id inventore iusto minus nam nisi perferendis qui rem soluta tenetur totam veritatis.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid autem consectetur dignissimos distinctio doloribus eos eum facilis, id inventore iusto minus nam nisi perferendis qui rem soluta tenetur totam veritatis.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid autem consectetur dignissimos distinctio doloribus eos eum facilis, id inventore iusto minus nam nisi perferendis qui rem soluta tenetur totam veritatis.</p>
+        </main>
         <footer>
             <p>Wiktor Kycia 4D</p>
         </footer>
