send file correctly in express-like style, do the same with handling form input

--- a/2025_10_29/static/kontakt.html
+++ b/2025_10_29/static/kontakt.html
@@ -25,7 +25,7 @@
                 <label for="email_input">Email</label>
                 <input type="email" name="email" id="email_input"><br>
                 <label>
-                    <textarea placeholder="wpisz treść wiadomośći"></textarea>
+                    <textarea placeholder="wpisz treść wiadomośći" name="message"></textarea>
                 </label>
                 <input type="submit" value="Wyślij">
             </form>
